syntax = "proto3";
package iheanyi.goopentracingexample.pinger;
option go_package = "pinger";

service Pinger {
  rpc Ping(PingRequest) returns (PingResponse);
}


message PingRequest {
  string message = 1;
}

message PingResponse {
  string body = 1;
}

